[엘리멘탈 포스터 과제] 구현 완료 링크 추가

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>JS homework 저장소</h1>
     <ul>
       <li><a href="./mission-01/naver_login/index.html">네이버 로그인 과제</a></li>
+      <li><a href="./mission-02/client/index.html">영화 포스터 과제</a></li>
     </ul>
   </body>
 </html>
